# liteDui

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01_glfw_win/: CMakeLists.txt  main.cpp
examples/02_skia_basic/: CMakeLists.txt  main.cpp
examples/03_layout_controls/: CMakeLists.txt  main.cpp
examples/04_gui_demo/: CMakeLists.txt  main.cpp
include/: lite_button.h  lite_checkbox.h  lite_color_picker.h  lite_combo_box.h  lite_common.h  lite_container.h  lite_dialog.h  lite_file_dialog.h  lite_font_manager.h  lite_group_box.h  lite_image.h  lite_input.h  lite_label.h  lite_layout.h  lite_list.h  lite_menu.h  lite_message_box.h  lite_progress_bar.h  lite_radio_button.h  lite_scroll_view.h  lite_skia_renderer.h  lite_slider.h  lite_tab_view.h  lite_table.h  lite_tooltip.h  lite_tree_view.h  lite_utf8.h  lite_window.h
plans/: gui_controls_gap_analysis.md  high_priority_controls_design.md  layout_controls_plan.md  new_controls_plan.md  overlay_system_design.md  tooltip_design.md
src/controls/: lite_button.cpp  lite_checkbox.cpp  lite_color_picker.cpp  lite_combo_box.cpp  lite_dialog.cpp  lite_file_dialog.cpp  lite_group_box.cpp  lite_image.cpp  lite_input.cpp  lite_label.cpp  lite_list.cpp  lite_menu.cpp  lite_message_box.cpp  lite_progress_bar.cpp  lite_radio_button.cpp  lite_scroll_view.cpp  lite_slider.cpp  lite_tab_view.cpp  lite_table.cpp  lite_tooltip.cpp  lite_tree_view.cpp
src/layout/: lite_container.cpp  lite_layout.cpp
src/render/: lite_font_manager.cpp  lite_skia_renderer.cpp
src/utils/: lite_utf8.cpp
src/window/: lite_window.cpp
